--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Description - Your Title</title>
+    <title>About me</title>
     <meta name="description" content="Your Description">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
     <link rel="stylesheet" href="css/reset.css">
@@ -34,7 +34,8 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Hi my name is ash i am a streamer gamer and coder i like to play games like minecraft roblox rust fortnite and all the other quite popular games but other than that i hope you have a lovely day.                and go check out my links</p>
+          <p>Hi my name is ash i am a streamer gamer and coder i like to play games like minecraft roblox rust fortnite and all the other quite popular games but other than that i hope you have a lovely day.  
+            and go check out my links</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
